--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ img {
 .hero-section {
   text-align: center;
   margin-top: 60px;
-  height: 100vh;
+  margin-bottom: 60px;
 }
 
 .hero-content,
